--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
         <title>Heroku Flask Template</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="{{ url_for('static', filename='css/index.css') }}" rel="stylesheet">
     </head>
 
     <body>
