--- a/templates/music.html
+++ b/templates/music.html
@@ -13,7 +13,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-3">
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
