--- a/templates/music.html
+++ b/templates/music.html
@@ -29,4 +29,30 @@
 
     <h1>Freshest beats</h1>
 
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Artist</th>
+                <th>Release date</th>
+                <th>Audio</th>
+                <th>Link</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {% for song in songs %}
+                <tr>
+                    <td>{{ song.song_id }}</td>
+                    <td>{{ song.title }}</td>
+                    <td>{{ song.artist }}</td>
+                    <td>{{ song.release_date }}</td>
+                    <td><audio controls><source src="{{ url_for('static', filename='audio/' + song.file_name) }}" type="audio/mpeg"></audio></td>
+                    <td><a href="{{ song.link }}">Link</a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
