--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h703smFh5tGbiipX7G1FaFkTvBQg5ZePJ7Ukv"
+        crossorigin="anonymous">
     <style>
         html {
             font-family: sans-serif;
