removed heroku stuff

--- a/templates/artistprofile.html
+++ b/templates/artistprofile.html
@@ -2,18 +2,9 @@
 
 {% block title %}{{ artist }}'s profile{% endblock %}
 
-{% block head %}<link href="{{ url_for('static', filename='css/artistprofile.css') }}" rel="stylesheet">
-<style>
-    img {
-        width: 300px;
-        height: 400px;
-    }
-
-    #music-details {
-    height: 600px;
-    overflow-y: scroll;
-}
-</style>{% endblock %}
+{% block head %}
+<link href="{{ url_for('static', filename='css/artistprofile.css') }}" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 
@@ -41,16 +32,16 @@
 <div class="row row-cols-2">
     <div class="col-3 mt-3 ml-4" id="artist-details">
         <h1>{{ artist }}</h1>
-        <p>{{ artist_details.description }}</p>
+        <p id="description">{{ artist_details.description }}</p>
         <img src="{{ url_for('static', filename='images/' + artist + '.jpg') }}" alt="artist image">
-        
-        <div>
+
+        <div class="mt-3">
             <li><a href="https://www.youtube.com/{{ artist_details.youtube }}">YouTube</a></li>
             <li><a href="https://www.instagram.com/{{ artist_details.instagram }}/">Instagram</a></li>
         </div>
     </div>
-    
-    <div class="mt-4">
+
+    <div class="col-8 mt-4">
         <h2 class="mb-4">Music</h2>
         <div id="music-details">
             <table class="table">
@@ -64,17 +55,18 @@
                         <th>Link</th>
                     </tr>
                 </thead>
-        
+
                 <tbody>
                     {% for song in songs %}
                     {% set x = loop.index %}
                     <tr>
-                        <td>{{ x }}.</td>
+                        <td id="nr">{{ x }}.</td>
                         <td>{{ song.title }}</td>
-                        <td>{{ song.artist }}</td>
-                        <td>{{ song.release_date }}</td>
+                        <td id="artists">{{ song.artist }}</td>
+                        <td id="release">{{ song.release_date }}</td>
                         <td><audio controls>
-                                <source src="{{ url_for('static', filename='audio/' + song.file_name) }}" type="audio/mpeg">
+                                <source src="{{ url_for('static', filename='audio/' + song.file_name) }}"
+                                    type="audio/mpeg">
                             </audio></td>
                         {% if song.link != "" %}
                         <td><a href="{{ song.link }}">YouTube</a></td>
